ci: setup npm publishing (#7)
* feat(build): setup npm publishing infrastructure

- rename package to @runpod/mcp-server for npm org publishing
- migrate build system from tsc to tsup for dual cjs/esm output
- add changesets for version management and automated releases
- setup github actions workflows for ci and automated publishing
- add eslint and prettier for code quality
- update license from mit to apache-2.0
- configure package.json with proper exports, publishconfig, and metadata
- fix typescript types (replace any with proper types)
- format code with prettier
- update documentation and smithery config for new build output

* feat(ci): migrate to npm trusted publishing with oidc

- add id-token: write permission for oidc authentication
- update node version to 20 for better npm oidc support
- add registry-url to setup-node action
- add npm update step for oidc and provenance support
- replace npm_token secret with npm_config_access env var
- remove npm_token from workflow env

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 permissions:
   contents: write
   pull-requests: write
+  id-token: write # Required for OIDC
 
 jobs:
   release:
@@ -27,8 +28,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: "pnpm"
+          node-version: 20
+          registry-url: https://registry.npmjs.org
+
+      - name: Ensure recent npm (OIDC + provenance support)
+        run: npm i -g npm@latest
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
@@ -36,15 +40,15 @@ jobs:
       - name: Build package
         run: pnpm run build
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Create Release Pull Request or Publish to npm (OIDC)
         id: changesets
         uses: changesets/action@v1
         with:
           publish: pnpm changeset:publish
           version: pnpm changeset:version
-          commit: "chore: version packages"
-          title: "chore: version packages"
+          commit: 'chore: version packages'
+          title: 'chore: version packages'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_CONFIG_ACCESS: public # For scoped public packages
 
