--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "runpod-mcp": "./dist/index.mjs"
+  },
   "files": [
     "dist/**/*",
     "CHANGELOG.md"
